Closed
Bug 1793922
Opened 3 years ago
Closed 3 years ago
[Wayland] Crash when screen screen is added
Categories
(Core :: Widget: Gtk, defect, P3)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
107 Branch
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug, )
Details
Crash Data
Attachments
(1 file)
[Wayland] Crash when screen screen is added. Looks like we have different monitor/screen numbers:
(gdb) p* this
$3 = (mozilla::widget::ScreenGetterWayland) {
<mozilla::widget::ScreenGetter> = {
_vptr$ScreenGetter = 0x7f2452330770 <vtable for mozilla::widget::ScreenGetterWayland+16>
},
members of mozilla::widget::ScreenGetterWayland:
mRegistry = 0x7f243a043470,
mMonitors = AutoTArray<mozilla::UniquePtr<mozilla::widget::MonitorConfig, mozilla::DefaultDelete<mozilla::widget::MonitorConfig> >, 4ul> = {
[(mozilla::widget::MonitorConfig *) 0x7f24392b7520], [(mozilla::widget::MonitorConfig *) 0x7f23a281a400]},
mScreenList = AutoTArray<RefPtr<mozilla::widget::Screen>, 4ul> = {[(mozilla::widget::Screen *)] = {
mRawPtr = 0x7f23a9a747b0
}}
}
| Assignee | ||
Comment 1•3 years ago
|
||
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/96a6cdbcf8e2
[Wayland] Refresh screen list if monitor/screen list is out of sync r=emilio
Comment 3•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox107:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
| Assignee | ||
Updated•3 years ago
|
status-firefox106:
--- → affected
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
QA Whiteboard: [qa-107b-p2]
Comment 5•3 years ago
|
||
Copying crash signatures from duplicate bugs.
Crash Signature: [@ mozilla::detail::InvalidArrayIndex_CRASH | mozilla::widget::ScreenGetterWayland::GetScreenForWindow]
[@ mozilla::detail::InvalidArrayIndex_CRASH | nsTArray_Impl<T>::ElementAt | nsTArray_Impl<T>::operator[] | mozilla::widget::ScreenGetterWayland::GetScr…
Comment 7•3 years ago
|
||
This affects Thunderbird 102 esr. But Firefox esr crashes are rare.
Crash Signature: [@ mozilla::detail::InvalidArrayIndex_CRASH | mozilla::widget::ScreenGetterWayland::GetScreenForWindow]
[@ mozilla::detail::InvalidArrayIndex_CRASH | nsTArray_Impl<T>::ElementAt | nsTArray_Impl<T>::operator[] | mozilla::widget::ScreenGetterWayland::GetScr… → [@ mozilla::detail::InvalidArrayIndex_CRASH | mozilla::widget::ScreenGetterWayland::GetScreenForWindow]
[@ mozilla::detail::InvalidArrayIndex_CRASH | nsTArray_Impl<T>::ElementAt | nsTArray_Impl<T>::operator[] | mozilla::widget::ScreenGetterWayland::GetSc…
QA Whiteboard: [qa-107b-p2] → [qa-107b-p2][tbird crash]
Updated•3 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•