Bug 1793922 [Wayland] Refresh screen list if monitor/screen list is out of sync r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D158747